# cse392_homework_repo

./: README.md
hw1/: CMakeLists.txt  hello.c
hw2/: CMakeLists.txt  scangather.cxx
hw3/: CMakeLists.txt  sorting.cxx
hw4/: CMakeLists.txt  setdiff  setdiff.cxx
hw5/: CMakeLists.txt  exercise2.cxx
